--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: Home
 <!DOCTYPE html>
 <html>
 <head>
-<title>Joe Bloggs - Curriculum Vitae</title>
+<title>AyoungNotes - |Decentralization Enthusiast| Local Innovation Startup| Life Coaching|</title>
 
 <meta name="viewport" content="width=device-width"/>
 <meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
@@ -26,15 +26,15 @@ title: Home
 		</div>
 		
 		<div id="name">
-			<h1 class="quickFade delayTwo">Joe Bloggs</h1>
-			<h2 class="quickFade delayThree">Job Title</h2>
+			<h1 class="quickFade delayTwo">Mr. Ayoung</h1>
+			<h2 class="quickFade delayThree">CEO</h2>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="mailto:joe@bloggs.com" target="_blank">joe@bloggs.com</a></li>
-				<li>w: <a href="http://www.bloggs.com">www.bloggs.com</a></li>
-				<li>m: 01234567890</li>
+				<li>e: <a href="mailto:ayoung.notes@gmail.com" target="_blank">ayoung.notes@gmail.com</a></li>
+				<li>w: <a href="https://www.ayoungnotes.com">www.ayoungnotes.com</a></li>
+				<li>m: 010299109/li>
 			</ul>
 		</div>
 		<div class="clear"></div>
