--- a/index.html
+++ b/index.html
@@ -2,9 +2,5 @@
 layout: default
 title: Home
 ---
-<div class="blog-index">  
-  {% assign post = site.posts.first %}
-  {% assign content = post.content %}
-  {% include post_detail.html %}
-</div>
+How I taking the risk that I have never done
 
