--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 layout: default
 title: Home
 ---
-How I taking the risk that I have never done
 
+<div class="blog-index">  
+  {% assign post = site.posts.first %}
+  {% assign content = post.content %}
+  {% include post_detail.html %}
+</div>
+s
