--- a/index.html
+++ b/index.html
@@ -2,4 +2,11 @@
 layout: default
 title: Home
 ---
-F*cking
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      {{ post.excerpt }}
+    </li>
+  {% endfor %}
+</ul>
