--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 layout: default
 title: Home
 ---
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      {{ post.excerpt }}
+    </li>
+  {% endfor %}
+</ul>
+
 <div class="blog-excerpt">
   <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
   {{ post.excerpt }} <a href="{{ post.url }}">... (more)</a>
