--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
       {{ post.excerpt | number_of_words }} 
     {% endcapture %} 
     {% if excerpt_words != content_words %}
-    
+    <p><a class="btn btn-sm btn-primary" href="{{ post.url }}" role="button">Read more <i class="fa fa-arrow-circle-right"></i></a></p>
     {% endif %}
   </div>
   <div class="panel-footer">
